--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE HTML>
+<!-- Hasta aquí lo estamos importando tal y como esta-->
+<!-- Hasta aquí lo estamos importando tal y como esta-->
 <html>
 <head>
     <title>eCommerce Project</title>
