--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- 18-01-2021-->
 <html>
 <head>
-    <title>eCommerce Project</title>
+    <title>Tiendita Lulu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <!-- JQuery Mobile -->
     <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
@@ -19,24 +19,24 @@
     <div data-role="page" id="mainPage" data-theme="a">
         <header data-role="header">
             <h1 id="title">E-Commerce</h1>
-            <button id="logoff">Log Off</button>
+            <button id="logoff">Salir</button>
         </header>
         <section data-role="content">
             <div data-role="tabs" id="tabs">
                 <div data-role="navbar">
                     <ul>
-                        <li><a href="#productTab" data-ajax="false">Products</a></li>
-                        <li><a href="#cartTab" data-ajax="false">My Cart</a></li>
-                        <li><a href="#profileTab" data-ajax="false">My Profile</a></li>
+                        <li><a href="#productTab" data-ajax="false">Productos</a></li>
+                        <li><a href="#cartTab" data-ajax="false">Mi carrito</a></li>
+                        <li><a href="#profileTab" data-ajax="false">Mi perfil</a></li>
                     </ul>
                 </div>
                 <div id="productTab" class="ui-body-d ui-content">
                     <div data-role="tabs" id="tabs">
                         <div data-role="navbar">
                             <ul>
-                                <li><a href="#cat-all" data-ajax="false">All</a></li>
-                                <li><a href="#cat-phone" data-ajax="false">Phones</a></li>
-                                <li><a href="#cat-tv" data-ajax="false">TVs</a></li>
+                                <li><a href="#cat-all" data-ajax="false">Todos</a></li>
+                                <li><a href="#cat-phone" data-ajax="false">Teléfonos</a></li>
+                                <li><a href="#cat-tv" data-ajax="false">Televisión</a></li>
                             </ul>
                         </div>
                         <div id="cat-all" class="ui-body-d ui-content">
@@ -62,7 +62,7 @@
                             <label id="profLogin"></label>
                             <label id="profName"></label>
                         </div>
-                        <a href="#updatePage" class="ui-btn">Update Info</a>
+                        <a href="#updatePage" class="ui-btn">Actualizar Información</a>
                     </div>
                 </div>
             </div>
@@ -70,51 +70,51 @@
     </div>
     <div data-role="page" id="loginPage" data-theme="a">
         <header data-role="header">
-            <h1>Sign In</h1>
+            <h1>Registrarse</h1>
         </header>
         <section data-role="content">
-            <input type="text" name="username" id="username" placeholder="Email" data-clear-btn="true">
-            <input type="password" name="password2" id="password2" placeholder="Password" data-clear-btn="true"
+            <input type="text" name="username" id="username" placeholder="Usuario-Email" data-clear-btn="true">
+            <input type="password" name="password2" id="password2" placeholder="Contraseña" data-clear-btn="true"
                 autocomplete="off">
-            <button id="login" class="ui-btn ui-btn-inline">Log In</button>
-            <label>Or</label>
-            <a href="#registerPage" class="ui-btn ui-btn-inline">Register</a>
+            <button id="login" class="ui-btn ui-btn-inline">Ingresar</button>
+            <label>O</label>
+            <a href="#registerPage" class="ui-btn ui-btn-inline">Registro</a>
         </section>
-        <div id="error-sign-in" data-role="popup" class="ui-content">Invalid user</div>
+        <div id="error-sign-in" data-role="popup" class="ui-content">Usuario No Válido</div>
     </div>
     <div data-role="page" id="registerPage" data-dialog="true" data-theme="a">
         <header data-role="header">
-            <h1>Registration</h1>
+            <h1>Registro</h1>
         </header>
         <section data-role="content">
             <form id="regForm">
-                <input type="text" class="form" name="regName" id="regName" placeholder="Name">
-                <input type="text" class="form" name="regEmail" id="regEmail" placeholder="Email">
-                <input type="password" class="form" name="regPassword" id="regPassword" placeholder="Password">
-                <a href="#" id="register" data-rel="popup" class="ui-btn">Submit</a>
-                <div id="popup" data-role="popup" class="ui-content">All fields must be filled</div>
+                <input type="email" class="form" name="regName" id="regName" placeholder="Correo-Name">
+                <input type="text" class="form" name="regEmail" id="regEmail" placeholder="Usuario-Email">
+                <input type="password" class="form" name="regPassword" id="regPassword" placeholder="Contraseña">
+                <a href="#" id="register" data-rel="popup" class="ui-btn">Enviar</a>
+                <div id="popup" data-role="popup" class="ui-content">Todos los campos son obligatorios</div>
             </form>
         </section>
         <footer data-role="footer"></footer>
     </div>
     <div data-role="page" id="updatePage" data-dialog="true" data-theme="a">
         <header data-role="header">
-            <h1>Update Info</h1>
+            <h1>Actualizar Información</h1>
         </header>
         <section data-role="content">
             <form id="updForm">
                 <input type="text" class="form" name="updName" id="updName" placeholder="Name">
                 <input type="password" class="form" name="updPassword" id="updPassword" placeholder="Password">
-                <a href="#" id="updateInfo" data-rel="popup" class="ui-btn">Update</a>
-                <div id="popup" data-role="popup" class="ui-content">All fields must be filled</div>
+                <a href="#" id="updateInfo" data-rel="popup" class="ui-btn">Actualizar</a>
+                <div id="popup" data-role="popup" class="ui-content">Todos los campos son obligatorios</div>
             </form>
         </section>
         <footer data-role="footer"></footer>
     </div>
     <div data-role="page" id="details-page" data-theme="a">
         <header data-role="header">
-            <a href="#mainPage">Back</a>
-            <h1>Product Details</h1>
+            <a href="#mainPage">Regresar</a>
+            <h1>Detalles del producto</h1>
         </header>
         <section data-role="content" class="ui-content" style="text-align: center;">
         </section>
