--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
                             <label id="profLogin"></label>
                             <label id="profPhone"></label>
                             <label id="profName"></label>
+                            <!--aqui van las alertas-->
+                            <label id="alertas"> </label>
                         </div>
                         <a href="#updatePage" class="ui-btn">Actualizar Información</a>
                     </div>
