solo agregue fecha

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <!-- Hasta aquí lo estamos importando tal y como esta-->
-<!-- 18-01-2021-->
+<!-- 21-01-2021-->
+<!-- funcional-->
 <!--https://github.com/rodvlima/jquery-mobile-ecommerce-->
 <html>
 <head>
