--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 </div>
                 <div id="cartTab" class="ui-body-d ui-content">
                     <ul data-role="listview" data-inset="true" data-filter="true" id="list-cart"></ul>
+                    <input type="button" id="botonazo" value="puto boton" onclick="imprimir()">
                 </div>
                 <div id="profileTab" class="ui-body-d ui-content">
                     <div class="ui-corner-all custom-corners">
@@ -93,8 +94,8 @@
             <form id="regForm">
                 <!------ voy a quitar  los "name" para después ligarlos con formulario ---------->
                 <input type="text" class="form" name="" id="regEmail" placeholder="Usuario">
-                <input type="number" class="form" name="" id="regPhone" placeholder="Teléfono">
-                <input type="email" class="form" name="" id="regName" placeholder="Correo">
+                <input type="text" class="form" name="" id="regPhone" placeholder="Teléfono">
+                <input type="text" class="form" name="" id="regName" placeholder="Correo">
                 <input type="password" class="form" name="" id="regPassword" placeholder="Contraseña">
                 <a href="#" id="register" data-rel="popup" class="ui-btn">Enviar</a>
                 <div id="popup" data-role="popup" class="ui-content">Todos los campos son obligatorios</div>
@@ -124,5 +125,7 @@
         <section data-role="content" class="ui-content" style="text-align: center;">
         </section>
     </div>
+
+
 </body>
 </html>
