buena version , falta agregar direccion, cambiar cantidad, eliminar actualizar, borrar carrito, darle estilo

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                         </div>
                         <div class="ui-body ui-body-a">
                             <label id="profLogin"></label>
+                            <!--//Phone*-->
                             <label id="profPhone"></label>
                             <label id="profName"></label>
                         </div>
@@ -92,8 +93,9 @@
         </header>
         <section data-role="content">
             <form id="regForm">
-                <!------ voy a quitar  los "name" para después ligarlos con formulario ---------->
+                <!--- voy a quitar  los "name" para después ligarlos con formulario -->
                 <input type="text" class="form" name="" id="regEmail" placeholder="Usuario">
+                <!--//Phone*-->
                 <input type="text" class="form" name="" id="regPhone" placeholder="Teléfono">
                 <input type="text" class="form" name="" id="regName" placeholder="Correo">
                 <input type="password" class="form" name="" id="regPassword" placeholder="Contraseña">
